@@ -93,6 +93,8 @@ New config options:
   Pause for (seconds) before connect to map server (Sometime server slower than bots).
 - autoBreakTime now supports the 'all' time, which makes it take a break
   every day in the week.
+- statsAddAuto_dontUseBonus (flag)
+  If set to 1 then statsAddAuto will not factor in the stat bonuses at all.
 
 New commands:
 - ihist
